Fix admin login input visibility

--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -125,11 +125,43 @@ body.fi-panel-admin::before {
 .fi-panel-admin .fi-input {
     padding-top: 0.85rem;
     padding-bottom: 0.85rem;
-    color: rgb(248 250 252);
+    color: rgb(248 250 252) !important;
+    caret-color: rgb(125 211 252);
+    -webkit-text-fill-color: rgb(248 250 252) !important;
 }
 
 .fi-panel-admin .fi-input::placeholder {
-    color: rgb(100 116 139);
+    color: rgb(100 116 139) !important;
+    -webkit-text-fill-color: rgb(100 116 139) !important;
+}
+
+.fi-panel-admin input,
+.fi-panel-admin input[type='email'],
+.fi-panel-admin input[type='password'],
+.fi-panel-admin input[type='text'],
+.fi-panel-admin textarea,
+.fi-panel-admin select {
+    color: rgb(248 250 252) !important;
+    caret-color: rgb(125 211 252);
+    -webkit-text-fill-color: rgb(248 250 252) !important;
+}
+
+.fi-panel-admin input:-webkit-autofill,
+.fi-panel-admin input:-webkit-autofill:hover,
+.fi-panel-admin input:-webkit-autofill:focus,
+.fi-panel-admin input:-webkit-autofill:active {
+    border: 0;
+    box-shadow: 0 0 0 1000px rgba(15, 23, 42, 0.96) inset !important;
+    -webkit-box-shadow: 0 0 0 1000px rgba(15, 23, 42, 0.96) inset !important;
+    -webkit-text-fill-color: rgb(248 250 252) !important;
+    caret-color: rgb(125 211 252);
+    transition: background-color 9999s ease-in-out 0s;
+}
+
+.fi-panel-admin .fi-input-wrp button,
+.fi-panel-admin .fi-input-wrp .fi-icon-btn,
+.fi-panel-admin .fi-input-wrp svg {
+    color: rgb(203 213 225) !important;
 }
 
 .fi-panel-admin .fi-fo-field-wrp-label,
